Add JPA-to-Spring-Data-Cosmos best practice rules